--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -363,7 +363,7 @@ It seems like there is an ongoing smiling competition between them two. They bri
                                             </div>
                                             <a data-toggle="collapse" data-parent="#schedule3_day1_main_timeline" href="#schedule3_day1_main_time3" class="schedule-item-toggle collapsed">
                                                 <strong class="time highlight"><span class="icon icon-office-24"></span>17:30-19:00</strong>
-                                                <h6 class="title">1th. Workshop Round<i class="icon icon-arrows-06"></i></h6>
+                                                <h6 class="title">Workshop Round Uno<i class="icon icon-arrows-06"></i></h6>
                                             </a>
                                             <div id="schedule3_day1_main_time3" class="panel-collapse collapse schedule-item-body">
                                                 <article>
@@ -502,7 +502,7 @@ It seems like there is an ongoing smiling competition between them two. They bri
                                             </div>
                                             <a data-toggle="collapse" data-parent="#schedule3_day2_main_timeline" href="#schedule3_day2_main_time4" class="schedule-item-toggle collapsed">
                                                 <strong class="time highlight"><span class="icon icon-office-24"></span>10:30 - 12:00</strong>
-                                                <h6 class="title">Workshops Round 2<i class="icon icon-arrows-06"></i></h6>
+                                                <h6 class="title">Workshops Round Dos<i class="icon icon-arrows-06"></i></h6>
                                             </a>
                                             <div id="schedule3_day2_main_time4" class="panel-collapse collapse schedule-item-body">
                                                 <article>
@@ -562,7 +562,7 @@ It seems like there is an ongoing smiling competition between them two. They bri
                                             </div>
                                             <a data-toggle="collapse" data-parent="#schedule3_day2_main_timeline" href="#schedule3_day2_main_time8" class="schedule-item-toggle collapsed">
                                                 <strong class="time highlight"><span class="icon icon-office-24"></span>15:30 - 17:00</strong>
-                                                <h6 class="title">Workshops Round 3<i class="icon icon-arrows-06"></i></h6>
+                                                <h6 class="title">Workshops Round Tres<i class="icon icon-arrows-06"></i></h6>
                                             </a>
                                             <div id="schedule3_day2_main_time8" class="panel-collapse collapse schedule-item-body">
                                                 <article>
@@ -584,7 +584,7 @@ It seems like there is an ongoing smiling competition between them two. They bri
                                             </div>
                                             <a data-toggle="collapse" data-parent="#schedule3_day2_main_timeline" href="#schedule3_day2_main_time11" class="schedule-item-toggle collapsed">
                                                 <strong class="time highlight"><span class="icon icon-office-24"></span>17:30 - 19:00</strong>
-                                                <h6 class="title">Workshops Round<i class="icon icon-arrows-06"></i></h6>
+                                                <h6 class="title">Workshops Round Cuatro<i class="icon icon-arrows-06"></i></h6>
                                             </a>
                                             <div id="schedule3_day2_main_time11" class="panel-collapse collapse schedule-item-body">
                                                 <article>
@@ -716,7 +716,7 @@ It seems like there is an ongoing smiling competition between them two. They bri
                                             </div>
                                             <a data-toggle="collapse" data-parent="#schedule3_day3_main_timeline" href="#schedule3_day3_main_time4" class="schedule-item-toggle collapsed">
                                                 <strong class="time highlight"><span class="icon icon-office-24"></span>10:30-12:00</strong>
-                                                <h6 class="title">Workshops Round<i class="icon icon-arrows-06"></i></h6>
+                                                <h6 class="title">Workshops Round Cinco<i class="icon icon-arrows-06"></i></h6>
                                             </a>
                                             <div id="schedule3_day3_main_time4" class="panel-collapse collapse schedule-item-body">
                                                 <article>
@@ -774,7 +774,7 @@ It seems like there is an ongoing smiling competition between them two. They bri
                                             </div>
                                             <a data-toggle="collapse" data-parent="#schedule3_day3_main_timeline" href="#schedule3_day3_main_time7" class="schedule-item-toggle collapsed">
                                                 <strong class="time highlight"><span class="icon icon-office-24"></span>15:30-17:00</strong>
-                                                <h6 class="title">Workshops Round<i class="icon icon-arrows-06"></i></h6>
+                                                <h6 class="title">Workshops Round Seis<i class="icon icon-arrows-06"></i></h6>
                                             </a>
                                             <div id="schedule3_day3_main_time7" class="panel-collapse collapse schedule-item-body">
                                                 <article>
