Update link and teachers2

--- a/acrofestival/templates/pages/winteracro/index.html
+++ b/acrofestival/templates/pages/winteracro/index.html
@@ -7,7 +7,7 @@
             <span class="logo"><img src="{% static "winteracro/images/logo_vek.svg"%}" alt="" /></span>
         <h1>{% tinycontent_simple 'winter_general_title' %}</h1>
         <p>{% tinycontent_simple 'winter_general_date' %}</br>
-        <a target="_blank" rel="noopener" href="https://acrolama.com/events/winter-acro-festival-2021/">Registration</a></p>
+        <a target="_blank" rel="noopener" href="https://acrolama.com/events/winter-acro-festival-2022/">Registration</a></p>
     </header>
     {% include 'pages/winteracro/snippets/navhome.html' %}
 <!-- Main -->
@@ -24,7 +24,7 @@
                         </p>
                     <ul class="actions">
                         <li>
-                            <a style="box-shadow:0px 0px; background:#f3d216;" target="_blank" rel="noopener" href="https://acrolama.com/events/winter-acro-festival-2021/" class="button">
+                            <a style="box-shadow:0px 0px; background:#f3d216;" target="_blank" rel="noopener" href="https://acrolama.com/events/winter-acro-festival-2022/" class="button">
                                 Register
                             </a>
                         </li>
@@ -73,7 +73,7 @@
             <footer class="major">
                 <ul class="actions">
                     <li>
-                        <a style="box-shadow: 0px 0px; background:#f3d216;" target="_blank" rel="noopener" href="https://acrolama.com/events/winter-acro-festival-2021/" class="button">Registration</a>
+                        <a style="box-shadow: 0px 0px; background:#f3d216;" target="_blank" rel="noopener" href="https://acrolama.com/events/winter-acro-festival-2022/" class="button">Registration</a>
                     </li>
                 </ul>
             </footer>
@@ -143,7 +143,7 @@
             <footer class="major">
                 <ul class="actions">
                     <li>
-                    <a style="box-shadow: 0px 0px; background:#f3d216;" target="_blank" rel="noopener" href="https://acrolama.com/events/winter-acro-festival-2021/" class="button">
+                    <a style="box-shadow: 0px 0px; background:#f3d216;" target="_blank" rel="noopener" href="https://acrolama.com/events/winter-acro-festival-2022/" class="button">
                         Register
                     </a>
                     </li>
@@ -162,30 +162,30 @@
                         <p><h2>Tom & Ayla</h2></p>
                         <p>
                         <span class="image left">
-                                <img src="{% static "winteracro/images/teachers2019/tomundayla.jpg"%}" alt="Tom and Ayla at the Winter Acro 2021">
+                                <img src="{% static "winteracro/images/teachers2019/tomundayla.jpg"%}" alt="Tom and Ayla at the Winter Acro 2022">
                         </span>
-                        You prooooobably already know them and if you don't, you should! Excellent acrobats with a particular style and sens of humor.Glad to have you guys on board!
-                        </p>
-                        <p><h2>Jen & Pri</h2></p>
-                        <p>
-                        <span class="image left">
-                                <img src="{% static "winteracro/images/teachers2019/priandjane.jpg"%}" alt="Jane and Pri comming to the Winter Acro Festival 2021">
-                        </span>
-                        There's probably only a handful of people who invest more time developing <u>whips in a wide range of variations</u>. We're super happy to count with them for this new version the Winter Acro.
-                        </p>
-                        <p><h2>Kat and Jared</h2></p>
-                        <p>
-                        <span class="image left">
-                                <img src="{% static "winteracro/images/teachers2019/katandjared.jpg"%}" alt="Kat and Jared at the Winter Acro 2021 doing some dance acro">
-                        </span>
-                        Many conventions have been shared but finally we hope to have them at the Winter Acro 2021. Amazing show this two have! And we love their workshops too!!
+                        You prooooobably already know them and if you don't, you should come and meet them ;-)! Excellent acrobats with a unique style and sens of humor. Glad to have you guys on board!
                         </p>
                         <p><h2>Bruno</h2></p>
                         <p>
                         <span class="image left">
-                        <img src="{% static "winteracro/images/teachers2019/bruno.jpg"%}" alt="Bruno the master of improvisation, clown and show winter acro 2021"></img>
+                        <img src="{% static "winteracro/images/teachers2019/bruno.jpg"%}" alt="Bruno the master of improvisation, clown and show winter acro 2022"></img>
                         </span>
-                        I had to laugh only from remembering Bruno! <u>Improvisation and staging</u> are he's strengths and passion. But it's hard to find the words to describe such a clown, you just have to meet him. Happy to have you with us my friend!
+                        I had to laugh only from remembering Bruno! <u>Improvisation and staging</u> are he's strengths and passion. But it's hard to find the words to describe such a warm hearted clown, you just have to meet him. Happy to have you with us my friend!
+                        </p>
+                        <p><h2>Wybren & Trudi</h2></p>
+                        <p>
+                        <span class="image left">
+                                <img src="{% static "winteracro/images/teachers2019/wybrenandtrudi.jpg"%}" alt="Wybren and Trudi at the Winter Acro 2022">
+                        </span>
+                        We ones again count with the blessing of having Trudi and Wybren! Nothing better then getting some real coaching for those serious tricks and share some good old stories with a cold beer.
+                        </p>
+                        <p><h2>Peter & Julie</h2></p>
+                        <p>
+                        <span class="image left">
+                                <img src="{% static "winteracro/images/teachers2019/peterandjulie.jpg"%}" alt="Peter Hunter and Julie Hundle at the Winter Acro 2022">
+                        </span>
+                        Acroyoga aint about competing ... we get it ... but if it was a competition, and cuteness and fun where the criteria, they would win, for life ... Glad to see you soon amigos.
                         </p>
                     </div>
             </div>
