Alfonso and Isa

--- a/acrofestival/templates/pages/winteracro/index.html
+++ b/acrofestival/templates/pages/winteracro/index.html
@@ -187,6 +187,13 @@
                         </span>
                         Acroyoga aint about competing ... we get it ... but if it was a competition, and cuteness and fun where the criteria, they would win, for life ... Glad to see you soon amigos.
                         </p>
+                        <p><h2>Alfonso & Isa</h2></p>
+                        <p>
+                        <span class="image left">
+                                <img src="{% static "winteracro/images/teachers2019/alfonsoandceline.jpg"%}" alt="Wybren and Celine at the Winter Acro 2022">
+                        </span>
+                        I always joke with Alfonso that he comes with the inventory of the Winter Acro. As famous as he is, we have someone managed to keep the tradition! Glad to have you on board brother! This time with Isa, another amazing Icarian/Acro flyer from the northern regions of Europe. Looking forward! 
+                        </p>
                     </div>
             </div>
         </section>
