Standing Acro Update

--- a/acrofestival/templates/pages/winteracro/index.html
+++ b/acrofestival/templates/pages/winteracro/index.html
@@ -159,10 +159,10 @@
                 </p>
                 <div class="box alt">
                     <div class="row gtr-uniform">
-                        <p><h2>Tom & Ayla</h2></p>
+                        <p><h2>Isis & Nathan aka. StandingAcro</h2></p>
                         <p>
                         <span class="image left">
-                                <img src="{% static "winteracro/images/teachers2019/tomundayla.jpg"%}" alt="Tom and Ayla at the Winter Acro 2022">
+                                <img src="{% static "winteracro/images/teachers2019/acrostandingacro.jpg"%}" alt="Standing Acro at the Winter Acro 2022">
                         </span>
                         You prooooobably already know them and if you don't, you should come and meet them ;-)! Excellent acrobats with a unique style and sens of humor. Glad to have you guys on board!
                         </p>
