--- a/acrofestival/templates/pages/winteracro/index.html
+++ b/acrofestival/templates/pages/winteracro/index.html
@@ -220,11 +220,12 @@
                 </div>
         </section>
         <!---Schedule -->
-        <section id="schedule" class="main special">
+        <section id="schedule" class="main special">k
             <header class="major">
                 <h2>Schedule</h2>
                 <p>{% tinycontent_simple 'winter_home_schedule' %}
                 </p>
+                <h2><a href="https://docs.google.com/spreadsheets/d/1U3Kyh77kwNPIyxkHhSyy07eEJlW29MELMOcjYbLpHWQ/edit?usp=sharing" target="_blank">WORKSHOP SCHEDULE</a></h2>
             </header>
                 <h2>Saturday</h2>
                 <ul class="statistics">
