Hardcoded linda Urban 2022

--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -16,7 +16,7 @@
                     <h6 class="thin base-font" style="background-color: rgba(254, 73, 24, 1)">What does a dyslexic cow say? <strong>OOoooM</strong>.❤</h6>
                 <div class="btns-container">
                     <!-- <a href="#" class="btn btn-md" data-modal-link="email-ticket">REGISTER</a> -->
-                    <a href="https://acrolama.com/events/urban-acro-festival-2021" class="btn btn-md" >Register</a>
+                    <a href="https://acrolama.com/events/urban-acro-festival-2022" class="btn btn-md" >Register</a>
                 </div>
             </div>
         </div>
@@ -46,7 +46,7 @@
                             <li class="navigation-item"><a href="#contacts" class="navigation-link">Location</a></li>
                         </ul>
                         <!-- <a data-modal-link="email-ticket" class="pull-right buy-btn">Register</a> -->
-                        <a href="https://acrolama.com/events/urban-acro-festival-2021/" class="pull-right buy-btn" >Register</a>
+                        <a href="https://acrolama.com/events/urban-acro-festival-2022/" class="pull-right buy-btn" >Register</a>
                     </div>
                 </div>
             </div>
@@ -240,67 +240,67 @@
     <section id="teachers" class="section align-center">
         <div class="container">
             <span class="icon section-icon icon-faces-users-04"></span>
-            <h3>Teachers 2021</h3>
-            <p class="text-alt">Meet our <span class="highlight"> International teachers.</span> Swiss teachers up soon ;-)</p>
+            <h3>Teachers 2022 - Comming Soon</h3>
+            <p class="text-alt">Soon <span class="highlight"> International and Swiss teachers.</span></p>
             <br />
             <br />
-            <div class="col-sm-4">
-                <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_marysiaijulian.jpg' %}" alt="Marysia and Julian at the Urban Acro Festival Icarian Games Schweiz" class="img-responsive"></div>
-                    <h3 class="name">Marysia & Julian</h3>
-                    <p class="text-alt"><small>Icarian Zirkus Style</small></p>
-                    <p class="about">It's the first teachers we invite that we haven't had the pleasure to meet. They 'inspired' ;-) more then one of our training sessions and have a acro style we really like! After some research, everyone said we should invite them! So here we are! Eager to learn from this two!
-                    <a href="https://www.instagram.com/marysiaijulian/">@marysiaijulina</a>
-                    </p>
-                    <ul class="speaker-socials">
-                    </ul>
-                </div>
-            </div>
-            <!-- Teachers Come here -->
-            <div class="col-sm-4">
-                <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_melindawildmann.jpg' %}" alt="Milinda Wildman & Tibor Ihasz Acro Dance at the Urban Acro Festival in Zürich" class="img-responsive"></div>
-                    <h3 class="name">Melinda & Tibor</h3>
-                    <p class="text-alt"><small>Dance dance revolution!</small></p>
-                    <p class="about">Last year some of you where all over us: "We want more Acro Dance" you said. Well, here they are, 3er place at the Acrobatic Rock&Roll World Cup should be enough for one Festival ;-) . We could say a lot about them but we'll let this video talked for us: <a href="https://www.youtube.com/watch?v=_B1y9_3O-zQ">YouTube</a></p>
-                    <ul class="speaker-socials">
-                    </ul>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_julikaandjannik.jpg' %}" alt="Julika and Jannik, feel the flow hamburg in the Urban Acro festival Zürich" class="img-responsive"></div>
-                    <h3 class="name">Julita & Jannik</h3>
-                    <p class="text-alt"><small>Direct import aus Hamburg</small></p>
-                    <p class="about">The story with this two does back many many years, similar paths in a way, from full on acroyogis to more traditional acrobats and Circus lovers. Jannik co-founded <a href="https://www.instagram.com/feel_the_flow_hamburg/">@feel_the_flow_hamburg</a> and Julia went a bit more into the Show Biz ;-) Multi talented Acrobats with much to share. Glad to have you on board!</p>
-                    <ul class="speaker-socials">
-                    </ul>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_fadri_leona.jpg' %}" alt="Fadri and Leona at the Urban Acro Festival Acrobatic Acroyoga and Standing Flows Schweiz" class="img-responsive"></div>
-                    <h3 class="name">Fadri & Leona</h3>
-                    <p class="text-alt"><small>Creative Acro Flows</small></p>
-                    <p class="about">Fadri has been teaching in the Acrolama Team for over a year and has a long long history as a Acrobat. Not a coincidence that ones he met Leona, another long long Acro lover, super creative new flows where born. Super looking forward to see you soon!
-                    </p>
-                    <ul class="speaker-socials">
-                    </ul>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_marie_tomas.jpg' %}" alt="Marie and Tomas at the Urban Acro Festival Acroyoga FlowsSchweiz" class="img-responsive"></div>
-                    <h3 class="name">Tomas and Marie</h3>
-                    <p class="text-alt"><small>Acro Adventure</small></p>
-                    <p class="about">Tomas and Marie fell in love at New Years Acro, started a road trip, got married and teach together as team AcroAdventure. 
-It seems like there is an ongoing smiling competition between them two. They bring a wealth of AcroYoga flow experience and can’t wait to teach here in Zürich!
-<a href="www.acroadventure.com">www.acroadventure.com</a>
-                    </p>
-                    <ul class="speaker-socials">
-                    </ul>
-                </div>
-            </div>
+            <!-- <div class="col-sm-4"> -->
+            <!--     <div class="speaker"> -->
+            <!--         <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_marysiaijulian.jpg' %}" alt="Marysia and Julian at the Urban Acro Festival Icarian Games Schweiz" class="img-responsive"></div> -->
+            <!--         <h3 class="name">Marysia & Julian</h3> -->
+            <!--         <p class="text-alt"><small>Icarian Zirkus Style</small></p> -->
+            <!--         <p class="about">It's the first teachers we invite that we haven't had the pleasure to meet. They 'inspired' ;-) more then one of our training sessions and have a acro style we really like! After some research, everyone said we should invite them! So here we are! Eager to learn from this two! -->
+            <!--         <a href="https://www.instagram.com/marysiaijulian/">@marysiaijulina</a> -->
+            <!--         </p> -->
+            <!--         <ul class="speaker-socials"> -->
+            <!--         </ul> -->
+            <!--     </div> -->
+            <!-- </div> -->
+            <!-- <!-1- Teachers Come here -1-> -->
+            <!-- <div class="col-sm-4"> -->
+            <!--     <div class="speaker"> -->
+            <!--         <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_melindawildmann.jpg' %}" alt="Milinda Wildman & Tibor Ihasz Acro Dance at the Urban Acro Festival in Zürich" class="img-responsive"></div> -->
+            <!--         <h3 class="name">Melinda & Tibor</h3> -->
+            <!--         <p class="text-alt"><small>Dance dance revolution!</small></p> -->
+            <!--         <p class="about">Last year some of you where all over us: "We want more Acro Dance" you said. Well, here they are, 3er place at the Acrobatic Rock&Roll World Cup should be enough for one Festival ;-) . We could say a lot about them but we'll let this video talked for us: <a href="https://www.youtube.com/watch?v=_B1y9_3O-zQ">YouTube</a></p> -->
+            <!--         <ul class="speaker-socials"> -->
+            <!--         </ul> -->
+            <!--     </div> -->
+            <!-- </div> -->
+            <!-- <div class="col-sm-4"> -->
+            <!--     <div class="speaker"> -->
+            <!--         <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_julikaandjannik.jpg' %}" alt="Julika and Jannik, feel the flow hamburg in the Urban Acro festival Zürich" class="img-responsive"></div> -->
+            <!--         <h3 class="name">Julita & Jannik</h3> -->
+            <!--         <p class="text-alt"><small>Direct import aus Hamburg</small></p> -->
+            <!--         <p class="about">The story with this two does back many many years, similar paths in a way, from full on acroyogis to more traditional acrobats and Circus lovers. Jannik co-founded <a href="https://www.instagram.com/feel_the_flow_hamburg/">@feel_the_flow_hamburg</a> and Julia went a bit more into the Show Biz ;-) Multi talented Acrobats with much to share. Glad to have you on board!</p> -->
+            <!--         <ul class="speaker-socials"> -->
+            <!--         </ul> -->
+            <!--     </div> -->
+            <!-- </div> -->
+            <!-- <div class="col-sm-4"> -->
+            <!--     <div class="speaker"> -->
+            <!--         <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_fadri_leona.jpg' %}" alt="Fadri and Leona at the Urban Acro Festival Acrobatic Acroyoga and Standing Flows Schweiz" class="img-responsive"></div> -->
+            <!--         <h3 class="name">Fadri & Leona</h3> -->
+            <!--         <p class="text-alt"><small>Creative Acro Flows</small></p> -->
+            <!--         <p class="about">Fadri has been teaching in the Acrolama Team for over a year and has a long long history as a Acrobat. Not a coincidence that ones he met Leona, another long long Acro lover, super creative new flows where born. Super looking forward to see you soon! -->
+            <!--         </p> -->
+            <!--         <ul class="speaker-socials"> -->
+            <!--         </ul> -->
+            <!--     </div> -->
+            <!-- </div> -->
+            <!-- <div class="col-sm-4"> -->
+            <!--     <div class="speaker"> -->
+            <!--         <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_marie_tomas.jpg' %}" alt="Marie and Tomas at the Urban Acro Festival Acroyoga FlowsSchweiz" class="img-responsive"></div> -->
+            <!--         <h3 class="name">Tomas and Marie</h3> -->
+            <!--         <p class="text-alt"><small>Acro Adventure</small></p> -->
+            <!--         <p class="about">Tomas and Marie fell in love at New Years Acro, started a road trip, got married and teach together as team AcroAdventure. --> 
+<!-- It seems like there is an ongoing smiling competition between them two. They bring a wealth of AcroYoga flow experience and can’t wait to teach here in Zürich! -->
+<!-- <a href="www.acroadventure.com">www.acroadventure.com</a> -->
+            <!--         </p> -->
+            <!--         <ul class="speaker-socials"> -->
+            <!--         </ul> -->
+            <!--     </div> -->
+            <!-- </div> -->
         </div>
     </section>
 
@@ -846,7 +846,7 @@ It seems like there is an ongoing smiling competition between them two. They bri
                                 <li><span class="fa fa-check check-icon"></span>Saturday Night Event</li>
                             </ul>
                         </div>
-                        <a href="https://acrolama.com/events/urban-acro-festival-2021" class="btn btn-lg btn-white" >Register</a>
+                        <a href="https://acrolama.com/events/urban-acro-festival-2022" class="btn btn-lg btn-white" >Register</a>
                     </div>
                 </div>
             </div>
